# claude-unity-bridge

./: .gitignore  .npmignore  .orc-swarm.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  codecov.yml  install.ps1  install.sh  package.json
.TestProject/: .gitignore  README.md  VALIDATION.md
.TestProject/Assets/Editor/: TestBuildPipeline.cs
.beads/: HANDOFF.md  issues.jsonl
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  publish.yml  test-skill.yml  test-unity.yml  unity-activation.yml
Editor/: ClaudeBridge.asmdef
Editor/Commands/: CompileCommand.cs  GetConsoleLogsCommand.cs  ICommand.cs  RefreshCommand.cs  RunTestsCommand.cs
Editor/Models/: CommandRequest.cs  CommandResponse.cs
TestProject/: .gitignore  README.md
TestProject/ProjectSettings/: ProjectVersion.txt
Tests/Editor/Commands/: CompileCommandTests.cs  GetStatusCommandTests.cs  RefreshCommandTests.cs  RunTestsCommandTests.cs
Tests/Editor/Models/: CommandRequestTests.cs
Tests/Editor/TestHelpers/: CommandTestFixture.cs  ResponseCapture.cs
docs/: ARCHITECTURE.md  INSTALLATION.md  USAGE.md
package/: .npmignore  CHANGELOG.md  package.json
package/Editor/: ClaudeBridge.cs
package/Editor/Commands/: BuildCommand.cs  CompileCommand.cs  EditorPlayMode.cs  GetConsoleLogsCommand.cs  GetStatusCommand.cs  IEditorPlayMode.cs  PauseCommand.cs  PlayCommand.cs  RefreshCommand.cs  RunTestsCommand.cs  StepCommand.cs
package/Editor/Models/: CommandRequest.cs  CommandResponse.cs
package/Tests/Editor/: ClaudeBridgeTests.cs  MXR.ClaudeBridge.Tests.Editor.asmdef
package/Tests/Editor/Commands/: CompileCommandTests.cs  GetConsoleLogsCommandTests.cs  GetStatusCommandTests.cs  PauseCommandTests.cs  PlayCommandTests.cs  StepCommandTests.cs
package/Tests/Editor/Models/: CommandRequestTests.cs  CommandResponseTests.cs
skill/: README.md  SKILL.md  TESTING.md  pyproject.toml  requirements-dev.txt
skill/references/: COMMANDS.md  EXTENDING.md
skill/scripts/: unity_command.py
skill/src/claude_unity_bridge/: __init__.py  cli.py
skill/src/claude_unity_bridge/skill/: SKILL.md
skill/tests/: __init__.py  test_cli.py  test_unity_command.py
